--- a/me.css
+++ b/me.css
@@ -27,9 +27,10 @@ nav img{
     margin-top: 30px;
 }
 
-@media screen and(max-width:400px)
-  nav .img{ 
+@media (max-width:400px){
+    img{ 
         margin-top:20px;
+}
 }
 
 
