--- a/me.css
+++ b/me.css
@@ -27,9 +27,12 @@ nav img{
     margin-top: 30px;
 }
 
-@media (max-width:400px){
+@media (max-width:700px){
     img{ 
         margin-top:20px;
+}
+    .me{
+        right:25%;}
 }
 }
 
