--- a/me.css
+++ b/me.css
@@ -35,10 +35,11 @@ nav img{
 }
 
 
-@media (max-width:400px){
+@media (max-width:700px){
     
 .me{
     flex-wrap: wrap;
+    align-items: right;
 }
 }
 
