--- a/me.css
+++ b/me.css
@@ -39,7 +39,7 @@ nav img{
     
 .me{
     flex-wrap: wrap;
-    align-items: right;
+ 
 }
 }
 
@@ -102,6 +102,9 @@ nav img{
     margin: 30px 0 40px;
     font-size: 20px;
     color: rgb(62, 95, 124);
+    display: flex;
+    justify-content: space-between;
+    
 }
 
 .me{
