--- a/me.css
+++ b/me.css
@@ -100,8 +100,9 @@ nav img{
 
 .text-box p{
     margin: 30px 0 40px;
-    font-size: 20px;
+    font-size: 16px;
     color: rgb(62, 95, 124);
+    line-height:25px;
     
     
 }
