--- a/me.css
+++ b/me.css
@@ -25,6 +25,7 @@
 nav img{ 
     width: 180px;
     margin-top: 30px;
+    margin-left: 100px;
 }
 
 @media (max-width:700px){
@@ -64,6 +65,8 @@ nav img{
     font-size: 40;
     display: inline-flex;
     text-decoration: none;
+    margin-left: -3;
+    margin-right: 140px;
 }
 
 .nav-links ul li::after{
@@ -85,7 +88,7 @@ nav img{
     color:rgb(62, 95, 124);
     position: absolute;
     top: 40%;
-    left: 14%;
+    left: 10%;
     transform: translate(-70%-30%);
     text-align: left;
 }
