--- a/me.css
+++ b/me.css
@@ -65,7 +65,7 @@ nav img{
     font-size: 40;
     display: inline-flex;
     text-decoration: none;
-    margin-left: 10;
+    margin-left: 7px;
     margin-right: 100px;
 }
 
